samples/_failures_safe/1761536933_e46b7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1434442b.c: In function ‘main’:
./samples/SAFE/__tmp_1434442b.c:153:25: error: missing terminating " character
  153 |         fprintf(stderr, "Failed to read input\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1434442b.c:153:9: error: expected expression at end of input
  153 |         fprintf(stderr, "Failed to read input\n
      |         ^~~~~~~
./samples/SAFE/__tmp_1434442b.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1434442b.c:153:9: error: expected declaration or statement at end of input
